# c-modules-with-cmake

./: .gitignore  CMakeLists.txt
src/: main.cpp  math.ixx
